major font changes

--- a/_includes/left-right-blocks.html
+++ b/_includes/left-right-blocks.html
@@ -13,8 +13,8 @@
                 <h2 class="fas {{ section.icon }} fa-2x">{{ section.title | markdownify  }}</h2>
                     {{ section.text | markdownify  }}
                 
-                    <a href="{{ section.link | relative_url }}" class="button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
-                        <span>Mehr Lesen</span>
+                    <a href="{{ section.link | relative_url }}" class="button is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
+                        <span>{{ section.link_text }}</span>
                         <span class="icon is-small">
                         <i class="fas fa-chevron-right"></i>
                         </span>
@@ -25,7 +25,7 @@
             <h2 class="fas {{ section.icon }} fa-2x">{{ section.title | markdownify  }}</h2>
                 {{ section.text | markdownify  }}
                 <a href="{{ section.link | relative_url }}" class="button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
-                    <span>Mehr Lesen</span>
+                    <span>{{ section.link_text }}</span>
                     <span class="icon is-small">
                     <i class="fas fa-chevron-right"></i>
                     </span>
