--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -88,6 +88,10 @@ div.highlight {
   background-color: #229387;
 }
 
+.hero-body .button, .content-wrapper .button {
+  padding: 16px !important;
+}
+
 .subtitle {
   padding: 50px;
 }
