--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
     
     <div class="container columns is-centered is-multiline is-bordered-bottom">
         <div class="navbar-brand column is-full">
-            <a href="{{ site.baseurl }}/" class=" navbar-item">
-                <img src="https://via.placeholder.com/128x128">
-                <h1 class="title is-4">{{ site.title }}</h1>
+            <a href="{{ site.baseurl }}/" class="columns navbar-item">
+                <img class="column" src="https://via.placeholder.com/128x128">
+                <p class="calumn brand-title">{{ site.title }}</p>
             </a>
         </div>
         <div class="column is-2">
