--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -54,7 +54,7 @@ div.highlight {
 
 .navbar-brand img {
   max-height: 2.5rem;
-  margin-top: 1.5rem;
+  margin-top: 1rem;
 }
 .navbar-brand a p {
   color: #000;
@@ -201,6 +201,10 @@ img.is-rounded {
   font-size: 0.75rem;
   margin-top: 10rem;  
   line-height: 1rem;
+}
+.footer img.column {
+  padding: 0 !important;  
+  flex-grow: 0;
 }
 .footer-logos img {
   height: 75px;
