--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,6 +52,7 @@ div.highlight {
   padding-top: 0.6rem;
 }
 
+
 .navbar-brand img {
   max-height: 2.5rem;
   margin-top: 1rem;
@@ -243,4 +244,11 @@ footer .columns {
   .hero.is-medium .hero-body {
     padding: 5rem 1rem 4.5rem;
   }
+  .navbar-menu .button{
+    // Buttongröße aus Figma
+    height: auto;
+  }
+  .footer-logos .column {
+    text-align: left !important;
+}
 }
