--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -1,1 +1,3 @@
 <!-- head scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/js/bulma-carousel.min.js" async></script>
+<script type="module" src="{{ site.baseurl }}/assets/js/main.js"async></script>
