--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
     <div class="container columns is-centered is-multiline is-bordered-bottom">
         <div class="navbar-brand column is-full">
             <a href="{{ site.baseurl }}/" class="columns navbar-item">
-                <img class="column" src="https://via.placeholder.com/128x128">
-                <p class="calumn brand-title">{{ site.title }}</p>
+                <img class="column" src="../assets/img/logo-white.png">
+                <p class="calumn brand-title">Inklusiv für alle</p>
             </a>
         </div>
         <div class="column is-2">
