--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -39,6 +39,9 @@ h2,
 h2 p {
   font-size: 36px;
   text-align: left;
+  background-repeat: no-repeat;
+  background-size: auto 35px;
+  font-family: "Verdana", sans-serif;
 }
 
 h3 {
