make chevron in all buttons smaller

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -8,7 +8,7 @@
                 <a href="{{ page.hero_link | relative_url }}" class="button is-rounded is-dark">
                     <span>{{ page.hero_link_text }}</span>
                     <span class="icon is-small">
-                    <i class="fas fa-chevron-right"></i>
+                    <i class="fas fa-chevron-right fa-xs"></i>
                     </span>
                 </a>
             {% endif %}
