--- a/_includes/left-right-blocks.html
+++ b/_includes/left-right-blocks.html
@@ -16,7 +16,7 @@
                     <a href="{{ section.link | relative_url }}" class="button is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
                         <span>{{ section.link_text }}</span>
                         <span class="icon is-small">
-                        <i class="fas fa-chevron-right"></i>
+                        <i class="fas fa-chevron-right fa-xs"></i>
                         </span>
                     </a>                    
             </div>
@@ -32,7 +32,7 @@
                 <a href="{{ section.link | relative_url }}" class="button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
                     <span>{{ section.link_text }}</span>
                     <span class="icon is-small">
-                    <i class="fas fa-chevron-right"></i>
+                    <i class="fas fa-chevron-right fa-xs"></i>
                     </span>
                 </a>                    
         </div>
