--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -24,7 +24,7 @@
                               <a href="/" class="button is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
                                   <span>Important</span>
                                   <span class="icon is-small">
-                                  <i class="fas fa-chevron-right"></i>
+                                  <i class="fas fa-chevron-right fa-xs"></i>
                                   </span>
                               </a>           
                             </div>
@@ -54,7 +54,7 @@
                               <a href="/" class="button is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
                                   <span>Important</span>
                                   <span class="icon is-small">
-                                  <i class="fas fa-chevron-right"></i>
+                                  <i class="fas fa-chevron-right fa-xs"></i>
                                   </span>
                               </a>           
                             </div>
