changes on slider-layout

--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -6,21 +6,21 @@
             <div class="story-carousel-item">
                 <div class="container">
                     <div class="section">
-                      <div class="card story-card columns">
-                        <div class="card-image column is-half">
-                          <figure class="image is-4by3">
+                      <div class="slider story-slider columns">
+                        <div class="slider-image column is-half">
+                          <figure class="image">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/Great_Wave_off_Kanagawa2.jpg" alt="this used to be photo">             
                           </figure>
                         </div>
-                        <div class="card-content column is-half">
+                        <div class="slider-content column is-half">
                             <div class="media">
                               <div class="media-content">
-                                <p class="title is-4">Once upon a time there was a sailor</p>
+                                <p class="">Once upon a time there was a sailor</p>
                               </div>
                             </div>
                 
                             <div class="content">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
                               <a href="/" class="button is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
                                   <span>Important</span>
                                   <span class="icon is-small">
@@ -36,21 +36,16 @@
             <div class="story-carousel-item">
                 <div class="container">
                     <div class="section">
-                      <div class="card story-card columns">
-                        <div class="card-image column is-half">
-                          <figure class="image is-4by3">
+                      <div class="slider story-slider columns">
+                        <div class="slider-image column is-half">
+                          <figure class="image">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/Great_Wave_off_Kanagawa2.jpg" alt="this used to be photo">             
                           </figure>
                         </div>
-                        <div class="card-content column is-half">
-                            <div class="media">
-                              <div class="media-content">
-                                <p class="title is-4">Once upon a time there was a sailor</p>
-                              </div>
-                            </div>
+                        <div class="slider-content column is-half">
                 
                             <div class="content">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
                               <a href="/" class="button is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
                                   <span>Important</span>
                                   <span class="icon is-small">
