--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -15,7 +15,7 @@
                         <div class="slider-content column is-half">
                             <div class="media">
                               <div class="media-content">
-                                <p class="">Once upon a time there was a sailor</p>
+                                <h2>Once upon a time there was a sailor</h2>
                               </div>
                             </div>
                 
