--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -231,7 +231,9 @@ img.is-rounded {
 .column.slider-content {
   padding: 3em;
 }
-
+.slider-content h2{
+  margin-bottom: 2rem;
+}
 .slider-content {
   width: 100%;
   display: flow-root;
