--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -38,6 +38,7 @@ h1 p {
 h2,
 h2 p {
   font-size: 36px;
+  font-weight: 600;
   text-align: left;
   background-repeat: no-repeat;
   background-size: auto 35px;
