I shoud have fixed the text. Instead I add a arrow :3

--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -59,5 +59,6 @@
                 </div>
             </div>
 		</div>
+    <img src="../assets/img/arrow.png" alt="placeholder"  class="arrow-image is-pulled-right is-hidden-mobile">
     </div>
 {% endif %}
