fix css for laptop size

--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -1,6 +1,6 @@
 {% if page.story_slider %}
     <div class="green">
-        <h1>Aktuelles</h1>
+        <h1 class="slider-titel">Aktuelles</h1>
 
         <div class="carousel">
             <div class="story-carousel-item">
