--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,7 +100,6 @@ img.is-rounded {
   padding-right: 0em !important;
 }
 
-
 // Hero
 .hero-body {
   background-color: white;
@@ -199,13 +198,12 @@ img.is-rounded {
   border-top-right-radius: 0px !important;
 }
 
-
 // story-slieder
 
 .green {
   background-color: #e7f2ea;
-  padding-left: 9rem;  
-  padding-right: 9rem;  
+  padding-left: 5%;
+  padding-right: 5%;
   padding-top: 6rem;
   padding-bottom: 8rem;
 }
@@ -214,6 +212,10 @@ img.is-rounded {
 }
 .slider-item {
   // padding-left: 50px;
+}
+.story-carousel-item {
+  margin-left: 5%;
+  margin-right: 5%;
 }
 .slider-container .card-content .content {
   margin: 50px;
@@ -229,16 +231,16 @@ img.is-rounded {
   float: right;
 }
 .column.slider-image {
-  padding: 0;  
+  padding: 0;
 }
 .column.slider-image img {
-  border-top-right-radius: 0 !important;  
+  border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
 }
 .column.slider-content {
   padding: 3em;
 }
-.slider-content h2{
+.slider-content h2 {
   margin-bottom: 2rem;
 }
 .slider-content {
@@ -253,7 +255,8 @@ img.is-rounded {
   box-shadow: none;
   cursor: pointer;
 }
-.slider-pagination .slider-page.is-active, .slider-pagination .slider-page:hover {  
+.slider-pagination .slider-page.is-active,
+.slider-pagination .slider-page:hover {
   background-color: #09443e !important;
   -webkit-transform: scale(1) !important;
   transform: scale(1) !important;
@@ -324,4 +327,3 @@ footer .columns {
     text-align: left !important;
   }
 }
-
