add sample stories and fix wrong logo reference

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container columns is-centered is-multiline is-bordered-bottom">
         <div class="navbar-brand column is-full">
             <a href="{{ site.baseurl }}/" class="columns navbar-item">
-                <img class="column" src="../assets/img/logo-white.png">
+                <img class="column" src="{{ site.baseurl }}/assets/img/logo-white.png">
                 <p class="calumn brand-title">Inklusiv für alle</p>
             </a>
         </div>
@@ -55,7 +55,7 @@
             <div class="column has-text-right"><div class="page-owner">
                 <p class="has-text-left">Eine Seite von</p>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/TH_Koeln_Logo.svg">
-                <img src="../assets/img/logo-dites.png">
+                <img src="{{ site.baseurl }}/assets/img/logo-dites.png">
             </div></div>
             <div class="column has-text-left"><div class="page-sponsor">                
                 <p class="has-text-left">Gefördert von</p>
