--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="navbar-brand">
             <a href="{{ site.baseurl }}/" class="">
-                <img src="../assets/img/logo-black.png">
+                <img src="{{ site.baseurl }}/assets/img/logo-black.png">
             </a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu"
                 :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
