--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -73,6 +73,11 @@ img.is-rounded {
   padding-top: 0.6rem;
 }
 
+.navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
+  background-color: #09443e;
+  color: #fff;
+}
+
 .navbar-brand img {
   max-height: 2.5rem;
   margin-top: 1rem;
@@ -82,7 +87,8 @@ img.is-rounded {
 }
 
 .navbar-item,
-.navbar-link {
+.navbar-link,
+.navbar-dropdown {
   padding-left: 0em;
   padding-right: 0em;
   padding-top: 0.65em;
@@ -99,7 +105,13 @@ img.is-rounded {
 .button.is-rounded {
   padding-right: 0em !important;
 }
-
+.navbar-dropdown .button.is-rounded {
+  padding-right: auto !important;
+}
+.navbar-dropdown .navbar-item {
+    padding: 0.50rem 1rem;
+    text-align: left;
+}
 
 // Hero
 .hero-body {
@@ -139,6 +151,9 @@ img.is-rounded {
 }
 
 .card {
+  margin-left: 3rem;
+  margin-right: 3rem;
+  margin-top: 6rem;
   box-shadow: none;
 }
 
@@ -170,6 +185,7 @@ img.is-rounded {
 
 .card-content {
   width: 100%;
+  padding: 3.5rem;
   display: flow-root;
   margin: auto;
 }
@@ -265,7 +281,7 @@ img.is-rounded {
 
 .footer {
   font-size: 0.75rem;
-  margin-top: 10rem;
+  margin-top: 5rem;
   line-height: 1rem;
 }
 .footer img.column {
@@ -307,6 +323,10 @@ footer .columns {
   .button {
     height: auto;
   }
+  .button a, .button span {
+    font-size: 24px !important;
+    font-weight: 600;
+}
   .buttons {
     display: table-caption;
   }
