--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -82,7 +82,7 @@ h5 {
   font-weight: 600;
 }
 
-.navbar-menu .button{
+.navbar-menu .button, .navbar-dropdown .button{
   // Buttongröße aus Figma
   width: 166px;
   height: 47px;
