--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -151,8 +151,8 @@ img.is-rounded {
 }
 
 .card {
-  margin-left: 3rem;
-  margin-right: 3rem;
+  // margin-left: 3rem;
+  // margin-right: 3rem;
   margin-top: 6rem;
   box-shadow: none;
 }
