--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -23,7 +23,7 @@ $modal-content-width: 800px;
 $tabs-link-active-color: $primary;
 $tabs-link-active-border-bottom-color: $primary;
 // Global
-body {  
+body {
   font-size: 1.5rem;
   line-height: 2.25rem;
 }
@@ -62,27 +62,29 @@ h5 {
   font-size: 1.31rem !important;
   font-weight: 600;
   // Animation
-  transition-timing-function: cubic-bezier(.25, .46, .45, .94);
+  transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition-property: background-color, transform;
-  transition-duration: .3s;
-  -webkit-transition-timing-function: cubic-bezier(.25, .46, .45, .94);
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   -webkit-transition-property: background-color, transform;
-  -webkit-transition-duration: .3s;
-  -o-transition-timing-function: cubic-bezier(.25, .46, .45, .94);
+  -webkit-transition-duration: 0.3s;
+  -o-transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   -o-transition-property: background-color, transform;
-  -o-transition-duration: .3s;
-  -moz-transition-timing-function: cubic-bezier(.25, .46, .45, .94);
+  -o-transition-duration: 0.3s;
+  -moz-transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   -moz-transition-property: background-color, transform;
-  -moz-transition-duration: .3s;
+  -moz-transition-duration: 0.3s;
 }
 
-.button a, .button span{
+.button a,
+.button span {
   // Schrifft
   font-size: 16px !important;
   font-weight: 600;
 }
 
-.navbar-menu .button, .navbar-dropdown .button{
+.navbar-menu .button,
+.navbar-dropdown .button {
   // Buttongröße aus Figma
   width: 166px;
   height: 47px;
