add new arrows, more space for buttons and smaller introduction

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -13,7 +13,7 @@
                 </a>
             {% endif %}
         </div>
-        <img src="../assets/img/arrow.png" alt="placeholder"  class="arrow-image is-pulled-left is-hidden-mobile"> 
+        <img src="../assets/img/arrow-down.png" alt="placeholder"  class="arrow-image is-pulled-left is-hidden-mobile"> 
     </div>
 </section>
 <i class="fas {{ section.icon }}"></i>
