--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -36,6 +36,6 @@
             </div>
             {% endfor %}
 		</div>
-    <img src="../assets/img/arrow.png" alt="placeholder"  class="arrow-image is-pulled-right is-hidden-mobile">
+    <img src="../assets/img/arrow-down.png" alt="placeholder"  class="arrow-image is-pulled-right is-hidden-mobile">
     </div>
 {% endif %}
